--- a/index.html
+++ b/index.html
@@ -11,10 +11,35 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-    <link rel="shortcut icon" href="./images/icons8-paragraph-16.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/icons8-paragraph-16.png" type="image/x-icon">
 </head>
 
 <body>
+  <header>
+    <h1>tired of boring lorem ipsum?</h1>
+  </header>
+  <main>
+    <div class="input-container">
+      <label class="input-title">Paragraphs: </label>
+      <input class="paragraph-input" type="text" placeholder="e.g. 5">
+      <button class="button-input">generate</button>
+    </div>
+    <div class="lorem-ipsum-text-container">
+      <p class="lorem-ipsum-text jsLoremIpsumText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
+        distinctio ipsa esse enim quibusdam quisquam earum vero illo nesciunt veritatis maiores et animi fuga totam eos
+        sunt dicta amet alias rem reprehenderit quaerat vitae vel! Cupiditate explicabo molestias consequatur, voluptas
+        deleniti expedita sunt quia! Commodi sit veniam, earum iure incidunt sint alias impedit perferendis ab
+        laboriosam reiciendis nemo, laborum rerum magni eos obcaecati quibusdam tempore eaque unde similique? Similique
+        ullam, inventore maxime praesentium nostrum ad fugit aliquid adipisci molestias! Hic itaque quibusdam
+        asperiores! Nisi vero porro, a animi ad assumenda placeat labore itaque, magnam ipsam consectetur nemo autem
+        quae odio quos eum ipsa optio deleniti illo dolor. Earum velit tempora, non delectus reiciendis nemo tempore
+        accusantium aspernatur a recusandae quas commodi? Sint, ipsam sed quo minima, earum omnis facere dolorum
+        consequatur fugiat ad quis. Officiis similique harum quas laudantium ea ab odio doloribus commodi quo, pariatur
+        in quod facere libero placeat repellat fuga eveniet eum? Quod nisi delectus, repellendus totam ipsa magni
+        deserunt ullam tempora, harum nulla dolor! Quasi ullam perspiciatis dignissimos, beatae maiores quibusdam cum
+        animi officiis a debitis, harum nulla, dolorum dolores aspernatur?</p>
+    </div>
+  </main>
   <script src="./script.js"></script>
 </body>
 
