made lorem generator interactive

--- a/index.html
+++ b/index.html
@@ -21,26 +21,13 @@
   <main>
     <div class="input-container">
       <label class="input-title">Paragraphs: </label>
-      <input class="paragraph-input" type="text" placeholder="e.g. 5">
-      <button class="button-input">generate</button>
+      <input class="paragraph-input jsParagraphInput" type="text" placeholder="e.g. 5">
+      <button class="button-input jsButtonInput">generate</button>
     </div>
-    <div class="lorem-ipsum-text-container">
-      <p class="lorem-ipsum-text jsLoremIpsumText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque,
-        distinctio ipsa esse enim quibusdam quisquam earum vero illo nesciunt veritatis maiores et animi fuga totam eos
-        sunt dicta amet alias rem reprehenderit quaerat vitae vel! Cupiditate explicabo molestias consequatur, voluptas
-        deleniti expedita sunt quia! Commodi sit veniam, earum iure incidunt sint alias impedit perferendis ab
-        laboriosam reiciendis nemo, laborum rerum magni eos obcaecati quibusdam tempore eaque unde similique? Similique
-        ullam, inventore maxime praesentium nostrum ad fugit aliquid adipisci molestias! Hic itaque quibusdam
-        asperiores! Nisi vero porro, a animi ad assumenda placeat labore itaque, magnam ipsam consectetur nemo autem
-        quae odio quos eum ipsa optio deleniti illo dolor. Earum velit tempora, non delectus reiciendis nemo tempore
-        accusantium aspernatur a recusandae quas commodi? Sint, ipsam sed quo minima, earum omnis facere dolorum
-        consequatur fugiat ad quis. Officiis similique harum quas laudantium ea ab odio doloribus commodi quo, pariatur
-        in quod facere libero placeat repellat fuga eveniet eum? Quod nisi delectus, repellendus totam ipsa magni
-        deserunt ullam tempora, harum nulla dolor! Quasi ullam perspiciatis dignissimos, beatae maiores quibusdam cum
-        animi officiis a debitis, harum nulla, dolorum dolores aspernatur?</p>
-    </div>
+    <p class="jsRandomTextContainer">
+    </p>
   </main>
-  <script src="./script.js"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 
 </html>
